# deepseek-tradingbot

./: .gitignore  analog_history.db  analog_rag.py  backfill_rag.py  backtest_matrix.py  constant.py  deepseek_analyzer.py  dhan_integration.py  dry_run_gate_fix_2026_06_22.py  dry_run_test.py  indicators.py  keep_awake.py  main.py  momentum_dryrun_2026_06_22.py  momentum_main.py  position_exit_guardian.py  regime_filter.py  requirements.droplet.txt  requirements.txt  reversal_detector.py  risk_controls.py  risk_manager.py  s22_live_runner.py  s22_overnight_state.json  sandbox_test_two_phase.py  scrip-master_NSE_EQ (1).csv  scrip_master_lookup.py  session_notes.md  signal_logger.py  simulate_signal.py  stock_trading_bot.py  streamlit_app.py  test_features_e2e.py  test_kronos_3m.py  test_kronos_simulation.py  test_pipeline_e2e.py
DhanMCP/: .env.example  claude_desktop_config.json  requirements.txt  server.py
hermes/: README.md
intraday_lab/: .gitignore  README.md  config.py  run.py  (+8 more)
opencode_intraday_startegy_lab/: .gitignore  README.md  cross_sectional_research.py  holdout_2024_b3.py  holdout_candidates.py  lead_lag_research.py  pyproject.toml  requirements.txt
opencode_intraday_startegy_lab/config/: backtest.yaml  dhan.yaml  optimization.yaml  universe.yaml
opencode_intraday_startegy_lab/intraday_strategy_lab/: __init__.py  backtest.py  cli.py  config.py  indicators.py  optimize.py  pipeline.py  reports.py  strategies.py
opencode_intraday_startegy_lab/intraday_strategy_lab/data/: dhan.py  io.py  universe.py
opencode_intraday_startegy_lab/tests/: test_smoke.py
(+113 files in other folders)
