[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-intraday-startegy-lab"
version = "0.1.0"
description = "Intraday strategy research lab using Dhan historical data"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["intraday_strategy_lab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
